@@ -1,6 +1,6 @@
 flext - C++ layer for Max/MSP and pd (pure data) externals
 
-Copyright (c) 2001-2003 Thomas Grill (xovo@gmx.net)
+Copyright (c) 2001-2004 Thomas Grill (xovo@gmx.net)
 For information on usage and redistribution, and for a DISCLAIMER OF ALL
 WARRANTIES, see the file, "license.txt," in this distribution.  
 
@@ -15,6 +15,7 @@ Version history:
 
 0.4.6:
 - added a text edit window for list attributes
+- finally use global allocator operators (MFC doesn't like but who cares)
 
 0.4.5:
 - added some more SIMD functions
